<resources>
    <string name="app_name">Lluvia de aspirinas</string>
    <string name="empezar">Comenzar</string>
    <string name="fondoinicio">fondoInicio</string>
    <string name="opciones">Opciones</string>
    <string name="salir">Salir</string>
    <string name="comenzar">Comenzar</string>
    <string name="efectos_sonoros">Efectos Sonoros</string>
    <string name="musica">Musica</string>
    <string name="volver">Volver</string>
    <string name="instrucciones">INSTRUCCIONES</string>
</resources>